--- a/base-newStyle copy/components/bin/newStyle.css
+++ b/base-newStyle copy/components/bin/newStyle.css
@@ -1393,7 +1393,6 @@
 
 .k-grid tr td {
   cursor: pointer;
-  text-align: right;
 }
 .k-grid tr td:hover {
   background-color: #7ad2f7 !important;
@@ -5187,6 +5186,9 @@ body.checkout-flow-v7.bg2 {
 #TafnitCore_SaaSServer_Survey_UI_Survey {
   padding: 0 !important;
 }
+#TafnitCore_SaaSServer_Survey_UI_Survey .x-self-container:has(.xstyle-signature-wrapper) {
+  zoom: 0.5;
+}
 #TafnitCore_SaaSServer_Survey_UI_Survey .x-login-user-error {
   border: 1px solid red !important;
 }
@@ -7435,7 +7437,7 @@ body.bodyPayment .logoImg {
   text-align: right;
 }
 
-.k-content:has(#TafnitCore_System_UI_App_Tools_Studio_UXStudio) .k-window:has(.k-edit-form-container) button.k-button-solid-primary, #TafnitCore_System_UI_App_Tools_Studio_UXStudio .xstyle-buttoncontrol-wrapper.spicelBTN button, #TafnitCore_System_UI_App_Tools_Studio_UXStudio .gridHeaderButton .spicellBTN button {
+.k-content:has(#TafnitCore_System_UI_App_Tools_Studio_UXStudio) .k-window:has(.k-edit-form-container) button.k-button-solid-primary {
   height: 40px !important;
   background: #B1BA1D;
   border-radius: 0px;
@@ -7451,7 +7453,7 @@ body.bodyPayment .logoImg {
   border: 1px solid #B1BA1D;
 }
 
-.k-content:has(#TafnitCore_System_UI_App_Tools_Studio_UXStudio) .k-window:has(.k-edit-form-container) button, #TafnitCore_System_UI_App_Tools_Studio_UXStudio .xstyle-buttoncontrol-wrapper button, #TafnitCore_System_UI_App_Tools_Studio_UXStudio .gridHeaderButton button {
+.k-content:has(#TafnitCore_System_UI_App_Tools_Studio_UXStudio) .k-window:has(.k-edit-form-container) button {
   background: #159BC5;
   border: none;
   border-radius: 0px;
@@ -7464,105 +7466,6 @@ body.bodyPayment .logoImg {
   font-size: 14px;
   line-height: 24px;
   min-width: 200px;
-}
-
-#TafnitCore_System_UI_App_Tools_Studio_UXStudio .header-grid .gridHeaderButton {
-  display: grid;
-  grid-template-columns: 1fr auto;
-  gap: 15px;
-  padding: 0px;
-}
-#TafnitCore_System_UI_App_Tools_Studio_UXStudio .gridHeaderButton {
-  display: grid;
-  grid-template-columns: 1fr auto;
-  gap: 15px;
-  padding: 0px;
-}
-#TafnitCore_System_UI_App_Tools_Studio_UXStudio .gridHeaderButton .x-button-wrapper:focus, #TafnitCore_System_UI_App_Tools_Studio_UXStudio .gridHeaderButton .x-button-wrapper:focus-within {
-  border: 1px solid none;
-  padding: 2px;
-}
-#TafnitCore_System_UI_App_Tools_Studio_UXStudio .gridHeaderButton button {
-  float: inherit !important;
-}
-#TafnitCore_System_UI_App_Tools_Studio_UXStudio .gridHeaderButton button:hover {
-  background: #29AFD9;
-  color: #ffffff;
-  border: 1px solid none;
-}
-#TafnitCore_System_UI_App_Tools_Studio_UXStudio .gridHeaderButton button:hover span:before, #TafnitCore_System_UI_App_Tools_Studio_UXStudio .gridHeaderButton button:hover span:after {
-  color: #ffffff !important;
-}
-#TafnitCore_System_UI_App_Tools_Studio_UXStudio .gridHeaderButton button:focus {
-  background: #159BC5;
-  color: #ffffff !important;
-  box-shadow: 0px 4px 8px 0px rgba(142, 187, 207, 0.5);
-  opacity: 1;
-  border: 1px solid none;
-  padding: 4px;
-}
-#TafnitCore_System_UI_App_Tools_Studio_UXStudio .gridHeaderButton button span {
-  color: #ffffff !important;
-  font-size: 30px;
-}
-#TafnitCore_System_UI_App_Tools_Studio_UXStudio .gridHeaderButton .icon-btn-text button {
-  width: 110px;
-}
-#TafnitCore_System_UI_App_Tools_Studio_UXStudio .gridHeaderButton .icon-btn-text button span:before {
-  right: -15px;
-}
-#TafnitCore_System_UI_App_Tools_Studio_UXStudio .gridHeaderButton .icon-btn button {
-  width: 50px !important;
-  height: 50px !important;
-  min-width: auto;
-}
-#TafnitCore_System_UI_App_Tools_Studio_UXStudio .xstyle-buttoncontrol-wrapper.spicelBTN .x-button-wrapper:focus, #TafnitCore_System_UI_App_Tools_Studio_UXStudio .xstyle-buttoncontrol-wrapper.spicelBTN .x-button-wrapper:focus-within {
-  border: 1px solid #9FA717;
-  padding: 2px;
-}
-#TafnitCore_System_UI_App_Tools_Studio_UXStudio .xstyle-buttoncontrol-wrapper.spicelBTN button:hover {
-  background: #9FA717;
-  color: #ffffff !important;
-  border: none !important;
-}
-#TafnitCore_System_UI_App_Tools_Studio_UXStudio .xstyle-buttoncontrol-wrapper.spicelBTN button:hover span::before {
-  color: #ffffff !important;
-}
-#TafnitCore_System_UI_App_Tools_Studio_UXStudio .xstyle-buttoncontrol-wrapper.spicelBTN button:focus {
-  background: #9FA717;
-  color: #ffffff !important;
-  opacity: 1;
-}
-#TafnitCore_System_UI_App_Tools_Studio_UXStudio .xstyle-buttoncontrol-wrapper.spicelBTN button:focus span:before, #TafnitCore_System_UI_App_Tools_Studio_UXStudio .xstyle-buttoncontrol-wrapper.spicelBTN button:focus span::after {
-  color: #ffffff !important;
-}
-#TafnitCore_System_UI_App_Tools_Studio_UXStudio .xstyle-buttoncontrol-wrapper .x-button-wrapper:focus, #TafnitCore_System_UI_App_Tools_Studio_UXStudio .xstyle-buttoncontrol-wrapper .x-button-wrapper:focus-within {
-  border: 1px solid none;
-  padding: 2px;
-}
-#TafnitCore_System_UI_App_Tools_Studio_UXStudio .xstyle-buttoncontrol-wrapper button {
-  max-width: 200px;
-  align-items: center;
-  display: flex !important;
-}
-#TafnitCore_System_UI_App_Tools_Studio_UXStudio .xstyle-buttoncontrol-wrapper button:hover {
-  background: #29AFD9;
-  color: #ffffff !important;
-  border: 1px solid #29AFD9;
-}
-#TafnitCore_System_UI_App_Tools_Studio_UXStudio .xstyle-buttoncontrol-wrapper button:hover span::before {
-  color: #ffffff !important;
-}
-#TafnitCore_System_UI_App_Tools_Studio_UXStudio .xstyle-buttoncontrol-wrapper button:focus {
-  background: #159BC5;
-  color: #ffffff !important;
-  box-shadow: 0px 4px 8px 0px rgba(142, 187, 207, 0.5);
-  opacity: 1;
-  border: 1px solid none;
-  padding: 4px;
-}
-#TafnitCore_System_UI_App_Tools_Studio_UXStudio .xstyle-buttoncontrol-wrapper button:focus span:before {
-  color: #ffffff !important;
 }
 
 #TafnitCore_System_UI_App_Tools_Studio_UXStudio div[uxid=xstudioComponent] {
@@ -7684,13 +7587,16 @@ body.bodyPayment .logoImg {
   margin-top: 0px !important;
 }
 #TafnitCore_System_UI_App_Tools_Studio_UXStudio mainbody .ux-studio-border.border-studio.xtaf-row-main, #TafnitCore_System_UI_App_Tools_Studio_UXStudio mainbody .ux-studio-border .xstudioRow.border-studio {
-  border-radius: 20px;
   border: 1px dashed black !important;
+}
+#TafnitCore_System_UI_App_Tools_Studio_UXStudio mainbody .ux-studio-border.border-studio.xtaf-row-main:hover, #TafnitCore_System_UI_App_Tools_Studio_UXStudio mainbody .ux-studio-border .xstudioRow.border-studio:hover {
   box-shadow: 0px 0px 6px 0px rgba(21, 155, 197, 0.8);
 }
 #TafnitCore_System_UI_App_Tools_Studio_UXStudio mainbody .ux-studio-border .xstudioCol.border-studio {
-  border-radius: 0px;
   border: 1px dashed black !important;
+}
+#TafnitCore_System_UI_App_Tools_Studio_UXStudio mainbody .ux-studio-border .xstudioCol.border-studio:hover {
+  box-shadow: 0px 0px 6px 0px rgba(21, 155, 197, 0.8);
 }
 #TafnitCore_System_UI_App_Tools_Studio_UXStudio mainbody .xtaf-row-main, #TafnitCore_System_UI_App_Tools_Studio_UXStudio mainbody .xstudioRow {
   background: #FFF;
