--- a/copy/portal/ContractorsSuppliers/components/_footer.scss
+++ b/copy/portal/ContractorsSuppliers/components/_footer.scss
@@ -1,4 +1,4 @@
-#TafnitCore_SaaSServer_Portal_ContractorsSuppliers_UI_WroteQuantities{
+#TafnitCore_SaaSServer_Portal_ContractorsSuppliers_UI_WroteQuantities,#TafnitCore_SaaSServer_Portal_ContractorsSuppliers_UI_Accounts{
 
   .x-footer{
 
