--- a/copy/portal/PortalCustomer/components/_drawer.scss
+++ b/copy/portal/PortalCustomer/components/_drawer.scss
@@ -154,7 +154,9 @@
         padding-left: 0 ;
       }
     }
-  
+     .k-drawer-wrapper{
+      margin-top: 5px;
+     }
     &.k-drawer-expanded
       .k-drawer
       .k-drawer-wrapper
