--- a/copy/portal/PortalCustomer/components/_row.scss
+++ b/copy/portal/PortalCustomer/components/_row.scss
@@ -75,3 +75,9 @@ margin-top: 0px !important;
       }
     }
   }
+
+  .xtaf-footer-btn{
+    display: flex;
+    justify-content: end;
+    gap: 15px;
+  }
