--- a/copy/portal/PortalCustomer/page/_Dashboard.scss
+++ b/copy/portal/PortalCustomer/page/_Dashboard.scss
@@ -20,7 +20,15 @@
         }
     }
 
+.col:has(div[uxid="gOpenLeasingOrders"]){
+    height: -webkit-fill-available;
 
+    div[uxid="lGoToOpenLeasingOrder"]{
+        position: absolute;
+        left: 0;
+        bottom: 2px;
+    }
+}
     .x-marquee.s-marquee{
         font-size: 14px;
         font-family: 'Heebo';
