--- a/copy/portal/PortalCustomer/variable/_variable.scss
+++ b/copy/portal/PortalCustomer/variable/_variable.scss
@@ -90,8 +90,8 @@ $header-details-span-color: #000000 !default;
 $header-details-label-color: #39b54a !default;
 $header-lastlogindetails-color: #a6a6a6 !default;
 $header-link-color: #30c6f5 !default;
-$lable-list-value-color: #000000 !default;
-$lable-list-caption-color: #1d5b25 !default;
+$label-list-value-color: #000000 !default;
+$label-list-caption-color: #1d5b25 !default;
 $label-list-bg: #ffe819 !default;
 $link-color: #30c6f5 !default;
 $list-view-bg-line-default: #ffffff !default;
@@ -176,7 +176,6 @@ $button-bg-press: #267931 !default;
 $check-box-focus-check: #6adbff !default;
 $drawer-icon-color-before: #ffffff !default;
 $drawer-icon-color-after: #6adbff !default; 
-$lable-list-bg: #ffffff !default;
 $order-link-color: #30c6f5 !default;
 $radio-button-focus-border: #6adbff !default;
 $speical-button-color-border-hover: #64cb72 !default;
