--- a/site/OPL/PortalCustomer/variable/_variable.scss
+++ b/site/OPL/PortalCustomer/variable/_variable.scss
@@ -69,7 +69,7 @@ $drawer-icon-color-before: #ffffff;
 $drawer-icon-color-after: #ffb444;  
 $first-panel-color-title: #0082c5; 
 $first-panel-color-icon-button: #4bbef9; 
-$first-panel-border-icon-button: #4bbef9; 
+$first-panel-border-icon-button: #0882c5; 
 $first-panel-bg-icon-button: #ffffff; 
 $grid-title-heder-h4-color: #0082c5; 
 $grid-button-color: #0082c5; 
@@ -97,9 +97,9 @@ $header-lastlogindetails-color: #a6a6a6;
 $header-link-color: #c81d24; 
 $header-details-label-color: #0082c5; 
 $header-details-span-color: #000000; 
-$lable-list-caption-color: #083b55; 
-$lable-list-value-color: #000000; 
-$lable-list-bg: #da242c; 
+$label-list-caption-color: #083b55; 
+$label-list-value-color: #000000; 
+$label-list-bg: #da242c; 
 $link-color: #c81d24; 
 $list-view-bg-line-default: #ffffff; 
 $list-view-icon-color-default: #0082c5; 
@@ -165,7 +165,7 @@ $special-button-color-border: #0082c5;
 $special-button-color-text-hover: #ffffff; 
 $special-button-color-text-focus: #0272ac; 
 $special-button-color-border-focus: #0272ac; 
-$special-button-color-border-hover: #169EE4; 
+$special-button-color-border-hover: #169ee4; 
 $special-button-color-icon: #0082c5; 
 $special-button-bg-hover: #169ee4; 
 $speical-button-press: #0272ac; 
@@ -182,8 +182,8 @@ $upload-color-icon: #0082c5;
 $upload-color-file-name: #000000; 
 $upload-color-text: #0082c5; 
 $upload-border-border-top: #086596; 
-$icon-after: #4bbef9; 
-$icon-before: #0082c5; 
+$icon-after: #0082c5; 
+$icon-before: #4bbef9; 
 
 $header-box-shadow: 0px 0px 10px 0px rgba(103, 103, 103, 0.10);
 $popup-k-filter-menu-box-shadow: 0px 5px 8px 0px rgba(0, 130, 197, 0.10);
