--- a/site/Pery/PortalCustomer/variable/_variable.scss
+++ b/site/Pery/PortalCustomer/variable/_variable.scss
@@ -95,8 +95,8 @@ $header-details-span-color: #000000;
 $header-details-label-color: #00b8a6; 
 $header-lastlogindetails-color: #a6a6a6; 
 $header-link-color: #e5ac04; 
-$lable-list-value-color: #000000; 
-$lable-list-caption-color: #058578; 
+$label-list-value-color: #000000; 
+$label-list-caption-color: #058578; 
 $label-list-bg: #ffe819; 
 $link-color: #e5ac04; 
 $list-view-bg-line-default: #ffffff; 
@@ -182,7 +182,6 @@ $button-bg-press: #019687;
 $check-box-focus-check: #ffec44; 
 $drawer-icon-color-before: #ffffff; 
 $drawer-icon-color-after: #ffe819; 
-$lable-list-bg: #ffffff; 
 $order-link-color: #e5ac04; 
 $radio-button-focus-border: #ffec44; 
 $special-button-color-border-hover: #0fcebc; 
