--- a/websdk/components/_grid.scss
+++ b/websdk/components/_grid.scss
@@ -39,7 +39,11 @@
     .k-grid-header {
         background: none;
         border: none;
-        padding: $grid-content-padding;
+        padding: $grid-content-padding !important;
+
+        .k-grid-header-wrap{
+          border: none;
+        }
 
         .k-grid-filter {
             &.k-state-active {
@@ -67,7 +71,6 @@
                 color:#7B098B;
                 font-weight: 500;
                 font-size: 13px;
-                padding-right: 0 !important;
                 border-bottom: 2px solid #D9D9D9 !important;
             }
 
@@ -761,7 +764,6 @@ border-radius: 10px;
           font-weight: 400;
           font-size: 13px;
           line-height: 130%;
-          text-align: right !important;
           color: map-get($map: $Colors, $key: text-defualt ) ;
           border: none;
           border-bottom: 1px solid #F5F5F5;
@@ -835,11 +837,7 @@ border-radius: 10px;
       }
     }
   
-    & >table>thead>tr>th>span>a{
-      width: 34px;
-      margin-right:  -10px !important;
-     
-    }
+
     & >table>thead>tr>th>span>span{
     
       font-family: map-get($map: $typographyVariables, $key: -font-family);
@@ -1016,18 +1014,8 @@ border-radius: 10px;
   }
 
 
-  .k-grid-filter-menu.k-grid-filter{
-    position: relative !important;
-    align-items: normal !important;
-  }
-
   
-  .k-grid .k-cell-inner > .k-link{
 
-     
-    flex: none !important;
-   
-     }
 
      .k-rtl .k-grid-header .k-filterable .k-link{
       padding-left: 10px !important;
@@ -1150,7 +1138,6 @@ border-radius: 10px;
      .k-i-filter{
       width: 50px;
       height: 38px;
-      margin-top: -3px !important;
      }
 
 
@@ -1168,13 +1155,7 @@ border-radius: 10px;
       text-indent: 0 !important
      }
 
-     .k-grid-filter-menu.k-grid-filter{
-
-      width: 32px;
-
-
-
-     }
+ 
 
    
 
