--- a/websdk/pages/_workflow.scss
+++ b/websdk/pages/_workflow.scss
@@ -140,6 +140,7 @@ th .k-checkbox::before{
         margin-top: 20px;
 
         .xstyle-dynamiclabelcontrol-wrapper{
+            cursor: pointer;
             span{
                 color: #000;
                 text-align: right;
