--- a/base-newStyle copy/pages/_Survey.scss
+++ b/base-newStyle copy/pages/_Survey.scss
@@ -41,7 +41,9 @@
 
 #TafnitCore_SaaSServer_Survey_UI_Survey{
 
-
+  .x-self-container:has(.xstyle-signature-wrapper){
+    zoom: 0.5;
+  }
 
     // error message // 
 
