--- a/copy/portal/ContractorsSuppliers/components/_popup.scss
+++ b/copy/portal/ContractorsSuppliers/components/_popup.scss
@@ -450,7 +450,7 @@
             margin-bottom: 10px;
             &:focus,
             &:focus-within{
-              border: $control-border-focus ;
+              border:1px solid $control-border-focus ;
               box-shadow: $control-box-shadow-focus;
             }
             & .k-button{
