--- a/copy/portal/ContractorsSuppliers/page/_userDetailes.scss
+++ b/copy/portal/ContractorsSuppliers/page/_userDetailes.scss
@@ -6,6 +6,10 @@
     border: none;
     box-shadow: none;
   }
+
+  .k-button{
+    margin-bottom: 20px;
+  }
   .k-grid-content.k-auto-scrollable > table > tbody > tr > td{
     text-align: right !important;
   }
