--- a/copy/portal/PortalCustomer/components/_firstPanel.scss
+++ b/copy/portal/PortalCustomer/components/_firstPanel.scss
@@ -47,6 +47,7 @@
                 
                 &:hover{
                     background: $button-bg-hover;
+                    border: 1px solid $special-button-color-border-hover;
                     color: white !important;
                     span::before{
                       color:  white !important;
