--- a/copy/portal/PortalCustomer/components/_label.scss
+++ b/copy/portal/PortalCustomer/components/_label.scss
@@ -7,7 +7,7 @@
     &::after{
     width: 7px;
     height: 7px;
-    background: $lable-list-bg ;
+    background: $label-list-bg ;
     content: "";
     position: absolute;
     top: 10px;
@@ -21,7 +21,7 @@
         font-size: 14px;
         line-height: 24px;
         text-align: right;
-        color: $lable-list-caption-color;
+        color: $label-list-caption-color;
         min-height: 2em;
 
     }
@@ -32,7 +32,7 @@
         font-family: 'Heebo';
         line-height: 24px ;
         margin-top: -4px;
-        color: $lable-list-value-color !important;
+        color: $label-list-value-color !important;
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
