--- a/copy/portal/PortalCustomer/components/_madia.scss
+++ b/copy/portal/PortalCustomer/components/_madia.scss
@@ -149,6 +149,7 @@
 
         height: 40px !important;
         font-size: 14px;
+        margin-bottom: 5px;
     }
 
     .k-window:has(.k-edit-form-container) button,.k-window:has(.k-edit-form-container) button.k-button-solid.k-button-solid-primary, .gridHeaderButton button, .xstyle-buttoncontrol-wrapper button{
