--- a/copy/portal/PortalSuppliers/components/_popup.scss
+++ b/copy/portal/PortalSuppliers/components/_popup.scss
@@ -428,7 +428,7 @@
             margin-bottom: 10px;
             &:focus,
             &:focus-within{
-              border: $control-border-focus !important;
+              border:1px solid $control-border-focus !important;
               box-shadow: $control-box-shadow-focus;
             }
             & .k-button{
