--- a/site/Aloni/components/_messageBox.scss
+++ b/site/Aloni/components/_messageBox.scss
@@ -1,73 +1,93 @@
-
 @use '../variable/variable' as *;
-.k-window:has(#MessageBoxWindow){
+// חלון הודעות//
 
-   #divCobuttonbtn1{
-    overflow: hidden;
-   }
-
-   button{
-    @extend %button;
-    margin-bottom: 15px;
-    padding: 0 30px;
-    min-width: 200px;
-    width: auto !important;
+.k-window:has(#MessageBoxWindow) {
+    background: $messagebox-bg;
+    box-shadow: $messagebox-box-shadow;
+    border-radius: 10px;
     border: none;
-    margin: auto;
-  &:hover{
-    background: $Button-bg-hover;
-
-    color: $Button-color-text;
-    border: 1px solid $Button-color-border;
-  }
-
-  &:focus{
-    border: 1px solid $Button-color-border-focus;
-    filter: $Button-boxshadow-focus;
-    opacity: 1;
-  }
-   }
-
-   #ctrlSectionMainSection{
-    display: block;
-    text-align: center;
-    & >div{
-        max-width: 100%;
-    }
-
-    #controlMessageText{
-        font-family: 'Heebo';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 18px;
-        line-height: 120%;
-        color: #000000;
-    }
-
-    i{
-        border-radius: 0 !important;
-    }
-
-    .x-fa-warning{
-        &:before{
-            content: "\e9cb";
-            color: #db0000;
+    max-height: 95%;
+    & .k-window-titlebar.k-hstack {
+      background: none !important;
+      border: none;
+.k-button{
+    margin-left: 0px;
+}
+      .k-i-close{
+        &::before{
+            content: "\e904";
             font-family: 'icomoon';
-            font-size: 60px;
+            font-size: 14px;
+            color: $messagebox-color-icon-close;
+
         }
+      }
 
     }
-   }
 
-   .row{
-    margin: auto;
-   }
-}
+    #MessageBoxWindow{
+        div#ctrlSectionMainSection{
+            display: block;
+             & >div{
+              margin: auto;
+              text-align: center;
 
-.k-i-close::before{
+              
+              & i::before{
+                content: "\e9cb";
+                font-family: 'icomoon';
+                color: $messagebox-color-icon;
+              }
 
-    content: "\e904";
-    font-family: 'icomoon';
-    font-size: 16px;
-    color: #000000;
-}
+              & span{
+                font-family: 'Heebo';
+                font-style: normal;
+                font-weight: 400;
+                font-size: 14px !important;
+                line-height: 100%;
+                color: $messagebox-color-text;
+              }
+             }
+         }
+         .x-icons{
+          border-radius: 0;
+         }
+        #divCobuttonbtn1{
+          width: fit-content;
+          margin: auto;
+          &:focus,&:focus-within,&:active{
+            border: 1px solid $button-border-color-focus;
+            padding: 2px;
+         }
+        }
+         button{
+            min-width: 200px !important;
+            height: 50px;
+            background: $messagebox-bg-button;
+            border-radius: 8px;
+            border: none;
+            font-family: 'Heebo';
+            font-style: normal;
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 24px;
+            text-align: right;
+            color: white;
+            margin: auto;
+
+            &:focus,
+            &:active,
+            &:focus-within{
+                background: $messagebox-bg-button-focus;
+            }
+
+            &:hover{
+
+                background:$messagebox-bg-button-hover;
+            }
+
+         }
+
+    }
+
+  }
