--- a/site/Aloni/components/_row.scss
+++ b/site/Aloni/components/_row.scss
@@ -235,3 +235,15 @@
   flex: 0 0 100%;
   gap: 15px;
 }
+
+
+.xtaf-linke-header{
+  display: flex;
+  justify-content: end;
+
+  .k-icon {
+    color: #625337;
+    font-size: 22px;
+    margin-right: 5px;
+  }
+}
