--- a/site/Aloni/components/_xMenu.scss
+++ b/site/Aloni/components/_xMenu.scss
@@ -31,10 +31,9 @@
         left: 0 !important;
         height: auto !important;
         .k-menu-group{
-            filter: drop-shadow(5px 5px 10px rgba(0, 0, 0, 0.3)) drop-shadow(0px 0px 10px rgba(0, 0, 0, 0.15));
+       box-shadow: 0px 0px 6px 0px rgba(174, 139, 73, 0.10), 0px 8px 5px 0px rgba(174, 139, 73, 0.10);
             border: none;
-            box-shadow: none !important;
-            border-radius: 30px;
+            border-radius: 8px;
             background: white;
             padding: 0px 0;
             width: 100%;
@@ -43,12 +42,13 @@
             .xstyle-dynamiclabelcontrol-wrapper{
                 padding: 15px 0;
                 border-bottom: 1px solid #E7E7E7;
+                border-radius: 0px;
                 span{
                     padding-right: 15px;
                     font-family: 'Heebo';
                     font-style: normal;
                     font-weight: 400;
-                    font-size: 20px;
+                    font-size: 16px;
                     line-height: 130%;
                     color: #000000;
                 }
