--- a/site/Aloni/pages/_ItemConfiguration.scss
+++ b/site/Aloni/pages/_ItemConfiguration.scss
@@ -32,7 +32,7 @@
                 
                          button{
                             padding: 0 10px;
-                            width: auto!important;
+                            width: 50px !important;
                          }
                     } 
                 }
