--- a/site/Aloni/style.scss
+++ b/site/Aloni/style.scss
@@ -37,6 +37,7 @@
 @use './components/scrollview';
 @use './components/dropdown';
 @use './components/messageBox';
+@use './components/checkBox';
 
 
 @import url('https://fonts.googleapis.com/css2?family=Assistant:wght@200;300;400;500;600;700&family=Heebo:wght@300;400;500;700&family=Inter:wght@100;200;300;400;500;600;700&family=Open+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap');
