--- a/site/Aloni/variable/_variable.scss
+++ b/site/Aloni/variable/_variable.scss
@@ -36,7 +36,7 @@ $overlay-color: #052136;
 $Button-bg-hover:#927338 ;
 $Button-color-text: #FFFFFF;
 $Button-color-border:none;
-$Button-color-border-focus:  #FFFFFF;
+$button-border-color-focus:  #FFFFFF;
 $Button-boxshadow-focus:  drop-shadow(0px 0px 6px #AE8B49);
 $Button-color-icon:#AE8B49 ;
 $Button-bg:#AE8B49 ;
@@ -95,13 +95,14 @@ $calendar-month-border-days-hover:1px solid #ff7100 ;;
 $calendar-fotter-color-text:#14008E;
 
 //checkBox //
-$CheckBox-border:#323C4B;
-$CheckBox-border-checked:#14008E;
-$CheckBox-color-checked: #FFFFFF;
-$CheckBox-caption:#000000;
-$CheckBox--checked-bg: #14008E;
-
-
+$checkbox-border: #000000 ;
+$checkbox-caption: #000000 ;
+$checkbox-color-checked: #AE8B49 ;
+$checkbox-border-checked: #AE8B49 ;
+$check-box-focus-border: none ;
+$check-box-disable-border: #a6a6a6 ;
+$check-box-disable-checked: #a6a6a6 ;
+$check-box-focus-box-shadow: 0px 1px 1px 0px rgba(174, 139, 73, 0.30), 0px 2px 2px 0px rgba(174, 139, 73, 0.20); ;
 // cube-dasboard //
 $Cube-dashboard-colot-text:#4B1754;
 $Cube-dashboard-bg:#FCFCFC;
@@ -163,8 +164,14 @@ $B2B-header-box-shadow:0px 5px 10px rgba(2, 111, 158, 0.1);
 $B2B-header-text-defult:#000000;
 $B2B-header-link-color:#ff7100 ;
 
-
-
+$messagebox-bg: #ffffff ;
+$messagebox-bg-button: #AE8B49 ;
+$messagebox-color-text: #000000 ;
+$messagebox-color-icon: #AE8B49 ;
+$messagebox-color-icon-close: #a6a6a6 ;
+$messagebox-bg-button-focus: #AE8B49 ;
+$messagebox-bg-button-hover: #927338 ;
+$messagebox-box-shadow:0px 5px 8px 0px rgba(174, 139, 73, 0.10);
 
 
 //label//
