--- a/site/Avis/PortalCustomer/variable/_variable.scss
+++ b/site/Avis/PortalCustomer/variable/_variable.scss
@@ -56,8 +56,8 @@ $cube-dashboard-colot-text: #770917;
 $cube-dashboard-color-icon: #770917; 
 $cube-dashboard-bg: #fcfcfc; 
 $drawer-icon-color: #f54c60; 
-$drawer-icon-color-before: #676767; 
-$drawer-icon-color-after: #F54C60; 
+$drawer-icon-color-before: #F54C60; 
+$drawer-icon-color-after: #676767; 
 $drawer-color: #db1c33; 
 $drawer-background-color: #ffffff; 
 $drawer-selected-color: #676767; 
@@ -93,9 +93,9 @@ $header-details-span-color: #000000;
 $header-details-label-color: #db1c33; 
 $header-lastlogindetails-color: #a6a6a6; 
 $header-link-color: #8e8e8e; 
-$lable-list-value-color: #000000; 
-$lable-list-caption-color: #770917; 
-$label-list-bg: #db1c33; 
+$label-list-value-color: #000000; 
+$label-list-caption-color: #770917; 
+$label-list-bg: #DB1C33; 
 $link-color: #8e8e8e; 
 $list-view-bg-line-default: #ffffff; 
 $list-view-icon-color-default: #db1c33; 
@@ -178,10 +178,9 @@ $window-text-special-color: #db1c33;
 $button-color-border: #db1c33; 
 $button-bg-press: #c11a2e; 
 $check-box-focus-check: #f54c60; 
-$lable-list-bg: #ffffff; 
 $order-link-color: #8e8e8e; 
 $radio-button-focus-border: #f54c60; 
-$special-button-color-border-hover: #db1c33; 
+$special-button-color-border-hover: #EB4C5F; 
 $upload-border-border-top: #a50017; 
 
 $popup-k-filter-menu-box-shadow: 0px 5px 8px 0px rgba(193, 26, 46, 0.10);
