--- a/site/eurodriver/PortalCustomer/variable/_variable.scss
+++ b/site/eurodriver/PortalCustomer/variable/_variable.scss
@@ -89,9 +89,9 @@ $header-details-span-color: #000000;
 $header-details-label-color: #39b54a; 
 $header-lastlogindetails-color: #a6a6a6; 
 $header-link-color: #30c6f5; 
-$lable-list-value-color: #000000; 
-$lable-list-caption-color: #1d5b25; 
-$label-list-bg: #ffe819; 
+$label-list-value-color: #000000; 
+$label-list-caption-color: #1d5b25; 
+$label-list-bg: #9CDAA4; 
 $link-color: #30c6f5; 
 $list-view-bg-line-default: #ffffff; 
 $list-view-icon-color-default: #39b54a; 
@@ -155,6 +155,7 @@ $speical-button-press: #30973e;
 $speical-button-color-border-focus: #30973e; 
 $special-button-color-border: #39b54a; 
 $special-button-color-icon: #39b54a; 
+$special-button-color-border-hover:#64cb72;
 $special-button-color-text-hover: #ffffff; 
 $special-button-bg-hover: #64cb72; 
 $special-button-color-text: #39b54a; 
@@ -175,7 +176,6 @@ $button-bg-press: #267931;
 $check-box-focus-check: #6adbff; 
 $drawer-icon-color-before: #ffffff; 
 $drawer-icon-color-after: #bde6c3;  
-$lable-list-bg: #ffffff; 
 $order-link-color: #30c6f5; 
 $radio-button-focus-border: #6adbff; 
 $speical-button-color-border-hover: #64cb72; 
