--- a/studio/components/_row.scss
+++ b/studio/components/_row.scss
@@ -6,16 +6,20 @@ mainbody {
 
     .ux-studio-border{
     &.border-studio.xtaf-row-main,.xstudioRow.border-studio{
-        border-radius: 20px;
         border: 1px dashed  black !important;
-        box-shadow: 0px 0px 6px 0px rgba(21, 155, 197, 0.80);
+
+        &:hover{
+            box-shadow: 0px 0px 6px 0px rgba(21, 155, 197, 0.80);
+        }
+       
     }
 
     .xstudioCol{
         &.border-studio {
-            border-radius: 0px;
             border: 1px dashed  black !important;
-   
+            &:hover{
+                box-shadow: 0px 0px 6px 0px rgba(21, 155, 197, 0.80);
+            }
         }
 
     }
